# moveit_studio_parallel_pick

./: .pre-commit-config.yaml
parallel_pick_behaviors/: CMakeLists.txt  behavior_plugin.yaml  package.xml  parallel_pick_behaviors_plugin_description.xml
parallel_pick_behaviors/config/: tree_nodes_model.xml
parallel_pick_behaviors/include/parallel_pick_behaviors/: get_current_planning_scene.hpp  push_to_solution_queue.hpp  setup_mtc_fixed_joint_state.hpp  wait_and_pop_solution_queue.hpp
parallel_pick_behaviors/src/: get_current_planning_scene.cpp  push_to_solution_queue.cpp  register_behaviors.cpp  setup_mtc_fixed_joint_state.cpp  wait_and_pop_solution_queue.cpp
parallel_pick_behaviors/test/: CMakeLists.txt  test_behavior_plugins.cpp
picknik_008_ur5_parallel_pick_config/: CMakeLists.txt  package.xml
picknik_008_ur5_parallel_pick_config/calibration/: kinematic_calibration.yaml
picknik_008_ur5_parallel_pick_config/config/: cameras.yaml  site_config.yaml
picknik_008_ur5_parallel_pick_config/config/moveit/: joint_limits.yaml  joint_limits_speedy.yaml  picknik_003_ur5e.srdf
picknik_008_ur5_parallel_pick_config/description/: picknik_008_ur.xacro
picknik_008_ur5_parallel_pick_config/objectives/: looping_bin_pick.xml  looping_bin_pick_config.yaml  mtc_fixed_state_demo.xml  pick_left_bin_config.yaml  pick_right_bin_config.yaml
picknik_008_ur5_parallel_pick_config/test/: test_parse_site_config.py
picknik_008_ur5_parallel_pick_config/waypoints/: waypoints.yaml
