<?xml version="1.0"?>
<package format="3">
  <name>picknik_008_ur5_parallel_pick_config</name>
  <version>2.4.0</version>

  <description>Site config package for Dev-008 UR-5 to show off parallel pick and place.</description>

  <maintainer email="joseph.schornak@picknik.ai">Joseph Schornak</maintainer>

  <license>Proprietary</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>picknik_ur_base_config</depend>
  <depend>parallel_pick_behaviors</depend>

  <test_depend>ament_lint_auto</test_depend>

  <test_depend>ament_clang_format</test_depend>
  <test_depend>ament_clang_tidy</test_depend>
  <test_depend>ament_cmake_copyright</test_depend>
  <test_depend>ament_cmake_lint_cmake</test_depend>
  <test_depend>ament_cmake_pytest</test_depend>
  <test_depend>moveit_studio_utils_py</test_depend>
  <test_depend>picknik_ament_copyright</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
